[gd_scene load_steps=10 format=3 uid="uid://d4ggjwqlltet8"]

[ext_resource type="Texture2D" uid="uid://b1j1d7k7f0mpt" path="res://Art/PlayerShip.svg" id="1_g33fe"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_nvk0n"]
[ext_resource type="Script" path="res://Scripts/Components/HealthComponent.gd" id="2_tgh23"]
[ext_resource type="Texture2D" uid="uid://crve3a3or5d67" path="res://Art/SmokeParticle.svg" id="3_ewbjk"]

[sub_resource type="Gradient" id="Gradient_2jm4i"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_1f72w"]
colors = PackedColorArray(3.65794e-06, 0.574138, 0.824301, 1, 1, 1, 1, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_nykoj"]
radius = 38.71

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o6605"]
size = Vector2(79, 50)

[sub_resource type="CircleShape2D" id="CircleShape2D_02obj"]
radius = 60.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
position = Vector2(877, 445)
collision_layer = 2
collision_mask = 32
motion_mode = 1
script = ExtResource("1_nvk0n")
metadata/_edit_group_ = true

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_tgh23")
Amount = 4

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("1_g33fe")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.8, 0.8)
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="SmokeParticles" type="CPUParticles2D" parent="."]
show_behind_parent = true
position = Vector2(-40, 0)
emitting = false
amount = 50
one_shot = true
texture = ExtResource("3_ewbjk")
emission_shape = 3
emission_rect_extents = Vector2(4, 4)
gravity = Vector2(0, 0)
angle_max = 180.0
color_ramp = SubResource("Gradient_2jm4i")

[node name="SmokeParticles2" type="CPUParticles2D" parent="."]
show_behind_parent = true
position = Vector2(-40, 0)
emitting = false
amount = 50
one_shot = true
texture = ExtResource("3_ewbjk")
emission_shape = 3
emission_rect_extents = Vector2(4, 4)
gravity = Vector2(0, 0)
angle_max = 180.0
scale_amount_min = 1.5
scale_amount_max = 1.5
color_ramp = SubResource("Gradient_1f72w")

[node name="Cannon1" type="Marker2D" parent="."]
position = Vector2(12, -18)

[node name="Cannon2" type="Marker2D" parent="."]
position = Vector2(12, 18)

[node name="SpeedTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("CircleShape2D_nykoj")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_o6605")

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(-0.5, 0)
shape = SubResource("CircleShape2D_02obj")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
